Plugin Name	: Email Subscribers & Newsletters
Plugin URI	: https://www.icegram.com/
Author		: Icegram
Author URI	: https://www.icegram.com/
License		: GPLv3

************************************************************Version 3.4.5************************************************************

* Fix: Not throwing 'Invalid Email' error for sanitized emails
* Fix: Showing 'Resend Confirmation' for confirmed emails
* Fix: '\n' showing in alert notice
* Update: Use term 'Templates' instead of 'Compose' in plugin
* Update: Code cleanup
* Update: POT file
* Localization: Made all translation files up-to-date with latest POT file

************************************************************Version 3.4.4************************************************************

* New: Introducing [Email Subscribers Pro](https://www.icegram.com/email-subscribers-pricing/) 
* Update: Change in logic for showing subscribers in subscribers dashboard

************************************************************Version 3.4.3************************************************************

* Fix: Templates showing up in frontend search results
* Update: Documentation links on Help & Info page
* Update: POT file
* Localization: Made all translation files up-to-date with latest POT file

************************************************************Version 3.4.2************************************************************

* Fix: User roles not working
* Fix: Viewed Status in Reports not updating after an email is opened
* Fix: Preview Template button not redirecting to correct page while previewing
* Update: Keyword structure display for Name & Email in preview
* Update: Thumbnail image on Templates
* Update: POT file
* Localization: Made all translation files up-to-date with latest POT file
* Localization: Translation for Portuguese-Brazil (pt_BR) language added (Thanks to Marcelo de Meneses Guedes)
